--- a/themewagon.github.io/journey/index.html
+++ b/themewagon.github.io/journey/index.html
@@ -60,6 +60,9 @@ http://www.templatemo.com/tm-511-journey
                                 <li class="nav-item">
                                     <a class="nav-link" href="#tm-section-4">Contact Us</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#tm-section-5">Contact Us</a>
+                                </li>
                             </ul>
                         </div>
                     </nav>
